--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,1 +1,8 @@
+<nav>
+  <ul>
+    <li><a href="{{ site.baseurl }}/about">About Me</a></li>
+    <li><a href="{{ site.baseurl }}/projects">Projects</a></li>
+    <li><a href="{{ site.baseurl }}/contact">Contact</a></li>
+  </ul>
+</nav>
 
